änderungen nur noch mit absprache